--- a/index.html
+++ b/index.html
@@ -334,27 +334,27 @@
     
                     <ul class="skill-bars">
                         <li>
-                        <div class="progress percent80"><span>80%</span></div>
-                        <strong>Programação Python</strong>
-                        </li>
-                        <li>
-                        <div class="progress percent50"><span>50%</span></div>
-                        <strong>Programação Java</strong>
+                        <div class="progress percent90"><span>90%</span></div>
+                        <strong>Python</strong>
                         </li>
                         <li>
                         <div class="progress percent65"><span>65%</span></div>
-                        <strong>Programação JavaScript</strong>
+                        <strong>Java</strong>
                         </li>
                         <li>
-                        <div class="progress percent65"><span>65%</span></div>
+                        <div class="progress percent75"><span>75%</span></div>
+                        <strong>JavaScript</strong>
+                        </li>
+                        <li>
+                        <div class="progress percent75"><span>75%</span></div>
                         <strong>HTML e CSS</strong>
                         </li>
                         <li>
-                        <div class="progress percent50"><span>50%</span></div>
+                        <div class="progress percent60"><span>60%</span></div>
                         <strong>Infraestrutura</strong>
                         </li>
                         <li>
-                        <div class="progress percent70"><span>70%</span></div>
+                        <div class="progress percent80"><span>80%</span></div>
                         <strong>Monitoração</strong>
                         </li>
                         <li>
