--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         Um sistema que prevê através de uma sigla monetária o valor 
                         para os próximos dias, baseado no histórico daquela ação e 
                         utilizando a biblioteca Skcite-learn para aprendizado de maquina. 
-                        <a href="https://www.behance.net/">Project Link</a>.
+                        <a href="https://github.com/Davantel/stock-market-forecast">Project Link</a>.
                         </p>
                     </div>
                 </div> <!-- entry -->
