--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             
                 
                     <h3 class="s-about__block-title">Experiência</h3>
-                    <ul class="s-about__list" id="experience">
+                    <ul class="s-about__list">
                         <h5>Analista de Monitoramento 08-2022 - Atualmente<br>
                             ADD Solution, São José do Rio Preto</h5>
                         <li>
