--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                             <strong>Django</strong>
                         </li>
                         <li>
-                            <div class="progress percent65"><span>65%</span></div>
+                            <div class="progress percent70"><span>70%</span></div>
                             <strong>Java</strong>
                         </li>
                         <li>
@@ -350,31 +350,31 @@
                             <strong>JavaScript</strong>
                         </li>
                         <li>
-                            <div class="progress percent75"><span>75%</span></div>
+                            <div class="progress percent80"><span>80%</span></div>
                             <strong>HTML e CSS</strong>
                         </li>
                         <li>
-                            <div class="progress percent60"><span>60%</span></div>
+                            <div class="progress percent65"><span>65%</span></div>
                             <strong>Infraestrutura</strong>
                         </li>
                         <li>
                             <div class="progress percent80"><span>80%</span></div>
-                            <strong>Monitoração</strong>
-                        </li>
-                        <li>
-                            <div class="progress percent65"><span>65%</span></div>
-                            <strong>Projetos</strong>
-                        </li>
-                        <li>
-                            <div class="progress percent65"><span>65%</span></div>
-                            <strong>Banco de Dados</strong>
-                        </li>
-                        <li>
-                            <div class="progress percent50"><span>50%</span></div>
-                            <strong>Linux</strong>
+                            <strong>Monitoramento</strong>
                         </li>
                         <li>
                             <div class="progress percent70"><span>70%</span></div>
+                            <strong>Projetos</strong>
+                        </li>
+                        <li>
+                            <div class="progress percent70"><span>70%</span></div>
+                            <strong>Banco de Dados</strong>
+                        </li>
+                        <li>
+                            <div class="progress percent65"><span>65%</span></div>
+                            <strong>Linux</strong>
+                        </li>
+                        <li>
+                            <div class="progress percent75"><span>75%</span></div>
                             <strong>Virtualização</strong>
                         </li>
                     </ul>
