--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
         <!-- # works
         ================================================== -->
-        <section id="works" class="s-works target-section">
+         <section id="works" class="s-works target-section">
 
             <div class="row">
                 <div class="column xl-12">
@@ -272,7 +272,47 @@
                 </div> <!-- entry -->
 
                 <div class="column entry">
-                    <a href="images/folio/gallery/g-inteligencia.png" class="entry__link glightbox" data-glightbox="title: Inteligencia Artificial; description: .entry__desc-03">
+                    <a href="images/folio/gallery/g-monitorar.jpeg" class="entry__link glightbox" data-glightbox="title: Monitoramento; description: .entry__desc-03">
+                        <div class="entry__thumb">
+                            <img src="images/folio/monitorar.jpeg" srcset="images/folio/monitorar.jpeg 1x, images/folio/monitorar@2x.jpeg 2x" alt="">
+                        </div>
+                        <div class="entry__info">
+                            <h4 class="entry__title">Monitoramento</h4>
+                            <div class="entry__cat">Cadastro de hosts Zabbix</div>
+                        </div>
+                    </a>
+
+                    <div class="glightbox-desc entry__desc-03">
+                        <p>
+                        Uma automação para cadastro de hosts com interface  
+                        na ferramenta de monitoramento Zabbix.
+                        <a href="https://github.com/Davantel/Zabbix/tree/main/cadastro-hosts" target="_blank">Link do Projeto</a>.
+                        </p>
+                    </div>
+                </div> <!-- entry -->
+
+                <div class="column entry">
+                    <a href="images/folio/gallery/g-assinc.png" class="entry__link glightbox" data-glightbox="title: Assincrono; description: .entry__desc-04">
+                        <div class="entry__thumb">
+                            <img src="images/folio/assinc.png" srcset="images/folio/assinc.png 1x, images/folio/assinc@2x.png 2x" alt="">
+                        </div>
+                        <div class="entry__info">
+                            <h4 class="entry__title">Assincrono</h4>
+                            <div class="entry__cat">Verifica clima de maneira assincrona</div>
+                        </div>
+                    </a>
+
+                    <div class="glightbox-desc entry__desc-04">
+                        <p>
+                        Uma ferramenta que verifica o clima de varias
+                        cidades ao mesmo tempo usando programação assincrona.  
+                        <a href="https://github.com/Davantel/get-async-weather" target="_blank">Link do Projeto</a>.
+                        </p>
+                    </div>
+                </div> <!-- entry -->
+
+                <div class="column entry">
+                    <a href="images/folio/gallery/g-inteligencia.png" class="entry__link glightbox" data-glightbox="title: Inteligencia Artificial; description: .entry__desc-05">
                         <div class="entry__thumb">
                             <img src="images/folio/inteligencia.png" srcset="images/folio/inteligencia.png 1x, images/folio/inteligencia@2x.png 2x" alt="">
                         </div>
@@ -282,7 +322,7 @@
                         </div>
                     </a>
 
-                    <div class="glightbox-desc entry__desc-03">
+                    <div class="glightbox-desc entry__desc-05">
                         <p>
                         Um sistema que prevê através de uma sigla monetária o valor 
                         para os próximos dias, baseado no histórico daquela ação e 
@@ -293,7 +333,7 @@
                 </div> <!-- entry -->
 
                 <div class="column entry">
-                    <a href="images/folio/gallery/g-cotacao.png" class="entry__link glightbox" data-glightbox="title: Cotação; description: .entry__desc-04">
+                    <a href="images/folio/gallery/g-cotacao.png" class="entry__link glightbox" data-glightbox="title: Cotação; description: .entry__desc-06">
                         <div class="entry__thumb">
                             <img src="images/folio/cotacao.png" srcset="images/folio/cotacao.png 1x, images/folio/cotacao@2x.png 2x" alt="">
                         </div>
@@ -303,7 +343,7 @@
                         </div>
                     </a>
 
-                    <div class="glightbox-desc entry__desc-04">
+                    <div class="glightbox-desc entry__desc-06">
                         <p>
                         Busca cotação do dolar, criptos e ações através de raspagem de dados, 
                         exibe uma interface gráfica e possibilita envio de SMS.
