--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                     </p>
 
                     <p class="attention-getter">
-                        Atualmente estou na área de Monitoramento e infraestrutura, com proficiência em liderança, gestão de atendimentos e usuários.
-                        Colaboro no desenvolvimento de projetos, no aperfeiçoamento de processos produtivos, no desempenho de qualidade,
+                        Atuei recentemente na área de Monitoramento e infraestrutura, com proficiência em liderança, gestão de atendimentos e usuários.
+                        Colaborei no desenvolvimento de projetos, no aperfeiçoamento de processos produtivos, no desempenho de qualidade,
                         segurança e controle de gastos.                     
                     </p>
                         
@@ -424,7 +424,7 @@
                 
                     <h3 class="s-about__block-title">Experiência</h3>
                     <ul class="s-about__list">
-                        <h5>Analista de Monitoramento 08-2022 - Atualmente<br>
+                        <h5>Analista de Monitoramento 08-2022 - 06-2023<br>
                             ADD Solution, São José do Rio Preto</h5>
                         <li>
                             <span>Realização de suporte presencial e remoto para problemas técnicos em equipamentos de
