--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <h1 class="s-intro__content-title">
                         Eu sou Caio Davantel <br>
                         Bacharel em Engenharia de Software <br>
-                        e afixionado por tecnlogia.
+                        e afixionado por tecnologia.
                         </h1>                            
 
                         <div class="s-intro__content-btns">
